cmake_minimum_required(VERSION 3.15)
project(lc)

set(CMAKE_CXX_STANDARD 14)

add_executable(test test.cpp)
add_executable(list list.cpp)
add_executable(gomapDFS gomapDFS.cpp)
add_executable(gomapBFS gomapBFS.cpp)
add_executable(s_heapsort s_heapsort.cpp)
add_executable(b_heapsort b_heapsort.cpp)
add_executable(01dp1 0-1packagedp1.cpp)
add_executable(01dp2 0-1packagedp2.cpp)
add_executable(5 5_longestPalindrome_mid.cpp)
add_executable(11 11_maxArea_mid.cpp)
add_executable(19 19_RemoveNth_mid.cpp)
add_executable(20 20_isValid_easy.cpp)
add_executable(24 24_SwapPairs_mid.cpp)
add_executable(34 34_SearchRange_mid.cpp)
add_executable(35 35_SearchInsertPosition_easy.cpp)
add_executable(62 62_UniquePath_mid.cpp)
add_executable(63 63_uniquepath2_mid.cpp)
add_executable(70 70_ClimbingStairs_easy.cpp)
add_executable(70. 70_ClimbingStairs_easy1.cpp)
add_executable(77 77_combine_mid.cpp)
add_executable(139 139_wordBreak_mid.cpp)
add_executable(150 150_evalRPN_mid.cpp)
add_executable(168 168_excel_easy.cpp)
add_executable(171 171_excel_easy.cpp)
add_executable(176 176_lagestNumber_mid.cpp)
add_executable(203 203_RemoveElements_easy.cpp)
add_executable(206 206_reverseList_easy.cpp)
add_executable(216 216_combination_mid.cpp)
add_executable(279 279_numSquares_mid.cpp)
add_executable(347 347_topK_mid.cpp)
add_executable(347. 347_topK_mid1.cpp)
add_executable(357 357_CountUnigueNumber_mid.cpp)
add_executable(397 397_IntegerReplace_mid.cpp)
add_executable(402 402_removeKdigits_mid.cpp)
add_executable(704 704_BinarySearch_easy.cpp)
add_executable(707 707_myLinkedList_mid.cpp)
add_executable(796 796_Rotate_String_easy.cpp)
add_executable(1306 1306_canReach_mid.cpp)